# ToDoWebSite

./: .env.example  .gitignore
backend/: pyproject.toml  ruff.toml
backend/app/core/: config.py
backend/app/db/: __init__.py  db.py
backend/app/models/: __init__.py  base_model.py  friendship_model.py  task_category_model.py  task_model.py  task_user_model.py  user_model.py
backend/app/schemas/: common_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 5deff08115f9_init_db.py
