[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "fastapi-async-sqlalchemy>=0.6.1",
    "pydantic[email]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = ["ruff>=0.11.11"]
